@@ -1,3 +1,9 @@
+2006-08-24  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXScrlbr.c (UpdateControlValues): set native scrollbar
+	control bounds only once all size adjustments have been computed.
+	Fixes issue with grow icon obscuring scrollbar reported on tcl-mac.
+
 2006-08-21  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXCarbonEvents.c (CarbonTimerProc): avoid starving main
